--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,7 +9,7 @@
     {{!-- <div id="titulosNav">
 
     </div> --}}
-    <title>Tickets</title>
+    <title>Login</title>
     {{!-- GOOGLE FONTS --}}
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
