--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,74 +1,107 @@
 body {
-    background-image: url(http://localhost:4200/img/login.jpg);
-    background-repeat: no-repeat;
-    height: 103vh;
-    background-size: cover;
-    background-position: center ;
+    margin: 0;
+    padding: 0;
+    background: #050816;
+    font-family: Arial, sans-serif;
 }
 
-header {
-    background-color:rgb(81, 108, 228);
-    background-image: url(https://o.remove.bg/downloads/e429a066-f794-4e17-8c35-7647a18d24e0/logo-removebg-preview.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 3%;
-    border: 2px solid #000000;
-    padding: 35px;
-   
-  }
-
-#container {
-    background-color: rgba(255, 255, 255, 0.8); 
-    border-radius: 12px;
-    padding: 100px;
-    width: 300px;
-    height: 70%;
-    position: absolute;
-    top: 20%;
-    left: 35%;
-   
+.contenedor {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    height: 100vh;
 }
-#cuadrado {
-    width: 95%;
-    height: 80%;
-    background-color: #4a73cc54;
+
+.imagen {
+    width: 50%; 
+    height: 100%;
     position: absolute;
-    top: 15%;
-    left: 3%;
-    border-radius: 2%;
+    left: 0px;
+}
+
+.hogar {
+    width: 5%;
+    height: 9%;
+    position: absolute;
+    left: 54%;
+    top: 2%;
+}
+
+.desbloquear {
+    width: 2%;
+    height: 4%;
+    position: absolute;
+    left: 85%;
+    top: 42%;
+}
+
+.usuario {
+    width: 2%;
+    height: 4%;
+    position: absolute;
+    left: 85%;
+    top: 31%;
 }
 
 h1 {
-    font-weight: 10%;
-    position: absolute;
-    top: 5%;
-    left: 10%;
-    
-}
-
-#input-box1 {
-    font-weight: 10%;
-    position:relative;
-    top: 30%;
-    left: -70%;
-
-}
-
-#input-box2 {
-    font-weight: 10%;
-    position: absolute;
-    top: 43%;
-    left: 10%;
-   
-}
-
-.boton {
-    border-radius: 20px;
-    padding: 8px;
-    background-color: #5299f5;
-    width: 105px;
     color: white;
-    margin: 195px 0px;
-    cursor: pointer;
-    border-color: rgb(255, 255, 255);
+    font-size: 35px;
+    margin-top: 20px;
+    position: absolute;
+    top: 10px;
+    left: 930px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
+
+form {
+    position: absolute;
+    left: 900px;
+    padding: 30px;
+    border-radius: 30px;
+    box-shadow: 0 0 10px rgb(255, 255, 255);
+    width: 320px;
+}
+
+#input-box {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+input {
+    border: none;
+    border-bottom: 1px solid #ffffff;
+    background: transparent;
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    color: rgb(255, 255, 255);
+}
+
+input[type="email"],
+input[type="password"] {
+    font-size: 16px;
+}
+
+input[type="submit"] {
+    background: #3498db;
+    color: rgb(255, 255, 255);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+input[type="submit"]:hover {
+    background: #258cd1;
+}
+input[type="submit"]:hover {
+    background: #258cd1; 
+}
+
+.check {
+    cursor: pointer;
+    color: white;
+
+} 
+ 
