--- a/src/public/css/Encomienda/agregar.css
+++ b/src/public/css/Encomienda/agregar.css
@@ -5,7 +5,7 @@ body {
     background-color: #f4f4f4;
   }
   .container {
-    background-image: url(/src/public/img/registro\ de\ encomiendas.jpg);
+    background-image: url(/src/public/img/registro_de_encomiendas.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
@@ -69,6 +69,82 @@ body {
     color: black;
   }
   
+  .soport p{
+    left: 800px;
+  }
+
+  #contenedorhe{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  #contenedor{
+    position: relative;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .navbar {
+      background-color: #1D202B;
+      overflow: hidden;
+    }
+  
+    .navbar a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+  
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+  #imagen{
+    width: 100%;
+    height: 100%;
+    max-width: 50%;
+    max-height: 100%;
+  }
+  #imagen img{
+    width: 20%;
+    height: 40%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  #boton{
+    width: 160px;
+    height: 48px;
+    background-color: #F28705;
+    border: none;
+    color: white;
+    padding: 5px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 30px;
+    right: 100px;
+    position: absolute;
+  }
+  #inicio{
+    position: absolute;
+    left: 650px;
+  }
+  .container{
+    max-width:840px;
+    margin: 0 auto 8px auto;
+  }
   #footer{
     background-color: #1D202A;
     position: relative;
@@ -114,3 +190,4 @@ body {
   .soport p{
     left: 800px;
   }
+  
