--- a/src/views/Encomienda/editar.hbs
+++ b/src/views/Encomienda/editar.hbs
@@ -1,12 +1,14 @@
 <link rel="stylesheet" href="/src/public/css/Encomienda/editar.css">
 <head>
+    <head>
     <div id="contendodrhe">
         <div>
             <div class="navbar">
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
-                    <a id="inicio" href="#">Inicio</a>
-                    <button id="boton" type="button" href="#">Ingresar</button>
+                    <a id="inicio" href="/views/inicio.hbs">Inicio</a>
+                    <a id="administrador" href="#">Administrador</a>
+                    <img id="img2" src="/img/perfil.png" alt="">
             </div>
     </div>
 </head>
