--- a/src/views/empleado/listar.hbs
+++ b/src/views/empleado/listar.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/src/public/css/Encomienda/listar.css">
-<form action="detalle_encimienda/lista/1" method="get"></form>
+<form action="empleado/lista/1" method="get"></form>
 <head>
- <head>
+   <head>
     <div id="contendodrhe">
         <div>
             <div class="navbar">
@@ -13,34 +13,52 @@
             </div>
     </div>
 </head>
-<h1>Registro de Encomiendas</h1>
+<h1>Registro de Empleados</h1>
 <div id="contenedor">
     
     <div class="row">
         {{#each lista}}
         <div id="tarjeta">
-            <u><h2>Remitente</h2></u>
+            <u><h2>Datos Personales</h2></u>
             <div>
                 <p>{{id_encomienda_remitente}}</p>
             </div>
             <div>
-                <p>{{nombres_encomienda_remitente}}</p>
+                <p>{{nombres_empleado}}</p>
             </div>
             <div>
-                <p>{{cedula_encomienda_remitente}}</p>
+                <p>{{apellido_empleado}}</p>
             </div>
             <div>
-                <p>{{telefono_encomienda_remitente}}</p>
+                <p>{{cedula_empleado}}</p>
             </div>
             <div>
-                <p>{{email_encomienda_remitente}}</p>
+                <p>{{fecha_nacimiento_empleado}}</p>
+            </div>
+            <div>
+                <p>{{provincia_empleado}}</p>
+            </div>
+            <div>
+                <p>{{calle_principal_empleado}}</p>
+            </div>
+            <div>
+                <p>{{calle_secundaria_empleado}}</p>
+            </div>
+            <div>
+                <p>{{celular_empleado}}</p>
+            </div>
+                <div>
+                <p>{{telefono_empleado}}</p>
+            </div>
+                <div>
+                <p>{{email_empleado}}</p>
             </div>
             <div>
                 <div>
-                    <a href="/encomienda_remitente/editar/{{id_encomienda_remitente}}"><button type="button">Editar</button></a>
+                    <a href="/empleado/editar/{{id_empleado}}"><button type="button">Editar</button></a>
                 </div></p>
                 <div>
-                    <a href="/encomienda_remitente/eliminar/{{id_encomienda_remitente}}"><button type="button" style="background-color: red;">Eliminar</button></a>
+                    <a href="/empleado/eliminar/{{id_empleado}}"><button type="button" style="background-color: red;">Eliminar</button></a>
                 </div></p>
             </div>
         </div>
