--- a/src/views/inicio2.hbs
+++ b/src/views/inicio2.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/inicio.css">
+<link rel="stylesheet" href="/css/inicio2.css">
 <from action="/"method="post">
 <body>
 <head>
@@ -7,10 +7,9 @@
             <div class="navbar">
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
-                    <a id="inicio" href="#">Inicio</a>
-                  <li class="nav__item">
-                    <a href="login.hbs" class="nav__link">Ingresar</a>
-                    </li>
+                    <a id="inicio" href="/views/inicio.hbs">Inicio</a>
+                    <a id="administrador" href="#">Administrador</a>
+                    <img id="img2" src="/img/perfil.png" alt="">
             </div>
     </div>
 </head>
@@ -25,19 +24,19 @@
         <img src="/img/login.jpg" alt="" style="width:80%">
             <h1>Buses y</h1>
             <h1>Cooperativa</h1>
-            <a href="/views/cooperativa/agregar.hbs">Ver más..</a>
+            <a href="">Ver más..</a>
     </div>
         <div id="card2">
             <img src="/img/empleados.png" alt="" style="width:80%">
                 <h1>Empleados</h1> <br>
-                <a href="/views/empleado/agregar.hbs">Ver más..</a>
+                <a href="">Ver más..</a>
         </div>
     </div>
     </div>
         <div id="card3">
             <img src="/img/encomiendav2.jpg" alt="" style="width:80%">
                 <h1>Encomienda</h1>
-                
+                <p class="price">Encontrarás aventuras que nunca podrás olvidar.</p>
                 <a href="">Ver más..</a>
         </div>
     </div>
@@ -45,7 +44,7 @@
         <div id="card4">
             <img src="/img/choferes.jpeg" alt="" style="width:85%">
                 <h1>Choferes</h1>
-             
+                <p class="price">Encontrarás aventuras que nunca podrás olvidar.</p>
                 <a href="">Ver más..</a>
         </div>
     </div>
@@ -87,9 +86,4 @@
       </div>
     </footer>
 </body>
-<script>
-        document.getElementById("boton").addEventListener("click", function() {
-            window.location.href = "inicio2.hbs";
-        });
-    </script>
 </from>
